HelloUltraviolet/Fixtures/RejectedSource/DataTypes/NoFloatNumericSubtyping/Expected.uv
//! Expected diagnostic metadata for the NoFloatNumericSubtyping rejected-source specimen.

expectedDiagnostic("E-MOD-2402", "req.NoFloatNumericSubtyping")
